manifests/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: oauth.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth-api-service
            port:
              number: 80
